--- a/rabu27825css/styles.css
+++ b/rabu27825css/styles.css
@@ -1,10 +1,12 @@
 table{
     border-collapse: collapse;
     width: 50%;
+    margin: 10px;
 }
 td{
     text-align: center;
 }
 th{
     background-color: aquamarine;
+    padding: 10px;
 }
