update flex.html and styles.css with new menu and channel layout; add initial YouTube directory structure

--- a/rabu3925flex/styles.css
+++ b/rabu3925flex/styles.css
@@ -1,3 +1,7 @@
+body{
+    width: 100vw;
+    height: 100vh;
+}
 .container{
     width: 500px;
     height: 500px;
@@ -21,4 +25,21 @@
     width: 50px;
     height: 110px;
     background-color: green;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    background-color: aqua;
+}
+img{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+}
+.channel{
+    display: flex;
+}
+#teksChannel{
+    margin-top: 0px;
 }
